--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/client": "^3.2.0",
-    "@sanity/image-url": "^1.0.1",
-    "@stripe/stripe-js": "^1.25.0",
-    "canvas-confetti": "^1.5.1",
-    "next": "12.1.0",
-    "next-sanity-image": "^3.2.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1",
-    "stripe": "^8.209.0"
+    "@sanity/client": "^6.1.3",
+    "@sanity/image-url": "^1.0.2",
+    "@stripe/stripe-js": "^1.54.1",
+    "canvas-confetti": "^1.6.0",
+    "eslint-config-next": "^13.4.7",
+    "next": "^13.4.7",
+    "next-sanity-image": "^6.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "stripe": "^12.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-syntax-jsx": "^7.18.6",
-    "@babel/preset-flow": "^7.18.6",
-    "@babel/preset-react": "^7.18.6"
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/preset-flow": "^7.22.5",
+    "@babel/preset-react": "^7.22.5"
   }
 }
